--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Equipes/Delete.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Equipes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Estoque
+﻿@model OrganWeb.Areas.Sistema.Models.Equipe
 
 @{
     ViewBag.Title = "Delete";
@@ -9,23 +9,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Estoque</h4>
+    <h4>Equipe</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Quantidade)
+            @Html.DisplayNameFor(model => model.Nome)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Quantidade)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnidadeMedida)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnidadeMedida)
+            @Html.DisplayFor(model => model.Nome)
         </dd>
 
     </dl>
