--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Details.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Estoque
+﻿@model OrganWeb.Areas.Sistema.Models.VwItems
 
 @{
     ViewBag.Title = "Details";
@@ -8,9 +8,17 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Estoque</h4>
+    <h4>VwItems</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Item)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Item)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Quantidade)
         </dt>
@@ -25,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.UnidadeMedida)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Categoria)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categoria)
         </dd>
 
     </dl>
