--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -30,6 +30,14 @@
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-seedling"></i>Plantios</a>
                         <ul class="sub-menu children dropdown-menu">
+                           <li>@Html.ActionLink("Doença", "Index", "Doencas", new { area = "Sistema" }, new { @class = "nav-link" })</li>
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-seedling"></i>Doenças</a>
+                        <ul class="sub-menu children dropdown-menu">
                             <li><a href="#">Item 1</a></li>
                             <li><a href="#">Item 2</a></li>
                         </ul>
