--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Edit.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/VwItems/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Estoque
+﻿@model OrganWeb.Areas.Sistema.Models.VwItems
 
 @{
     ViewBag.Title = "Edit";
@@ -13,10 +13,18 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Estoque</h4>
+        <h4>VwItems</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Item, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Item, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Item, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Quantidade, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -31,6 +39,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UnidadeMedida, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UnidadeMedida, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Categoria, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Categoria, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
             </div>
         </div>
 
