--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
+    <title>@ViewBag.Title - Organ</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/fontawesome")
@@ -40,23 +40,7 @@
                         </div>
                     </li>
                 </ul>
-                <ul class="navbar-nav navbar-nav-right">
-                    <li class="nav-item nav-profile dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                            <img src="~/Imagens/admin.jpg" alt="profile" />
-                            <span class="nav-profile-name">Grande Butera</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-
-                            <!--<i class="text-primary"></i>-->
-                            @Html.ActionLink("Login", "LoginRegistro", "Account", routeValues: null, htmlAttributes: new { @class = "dropdown-item" })
-
-                        </div>
-                    </li>
-                </ul>
-                <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-                    <i class="fa fa-bars"></i>
-                </button>
+                @Html.Partial("_LoginPartial")
             </div>
         </nav>
 
