--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/View.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/View.cshtml
@@ -6,3 +6,46 @@
 
 <h2>Estoque</h2>
 
+<div class="main-body">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h6 class="card-title box-title">Itens</h6>
+                    <div class="card-header-right">
+                        <ul class="list-unstyled card-option">
+                            <li><i class="ti-minus minimize-card"></i></li>
+                            <li><i class="icon-refresh"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <table class="table">
+                            <thead class="thead-title">
+                                <tr>
+                                    <th scope="col">Item</th>
+                                    <th scope="col">Quantidade</th>
+                                    <th scope="col">Unidade de medida</th>
+                                    <th scope="col">Categoria</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.VwItems)
+                                {
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Item)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Quantidade)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.UnidadeMedida)</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
