--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
@@ -21,12 +21,16 @@
                 </div>
                 <div class="card-body">
                     <div class="card-content">
+                        <div class="card-content">
+                            <button type="button" class="btn btn-info waves-effect" data-toggle="modal" data-target="#Modal-lightbox">Novo item</button>
+                            @{Html.RenderAction("_NovoItem", "Estoque");}
+                        </div>
                         <table class="table">
                             <thead class="thead-title">
                                 <tr>
+                                    <th scope="col">#</th>
                                     <th scope="col">Item</th>
                                     <th scope="col">Quantidade</th>
-                                    <th scope="col">Unidade de medida</th>
                                     <th scope="col">Categoria</th>
                                 </tr>
                             </thead>
@@ -34,11 +38,10 @@
                                 @foreach (var item in Model.VwItems)
                                 {
                                     <tr>
-                                        <th scope="row"></th>
                                         <td>@Html.DisplayFor(modelItem => item.Id)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Item)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Quantidade)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.UnidadeMedida)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Quantidade) @Html.DisplayFor(modelItem => item.UnidadeMedida)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Categoria)</td>
                                     </tr>
                                 }
                             </tbody>
