--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
@@ -52,3 +52,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    $('#modal-container').change(
+        function () {
+            $.validator.unobtrusive.parse("#Modal-lightbox");
+        });
+</script>
