--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
@@ -1,19 +1,23 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.Item
 
-<div class="modal fade" id="Modal-lightbox" tabindex="-1" role="dialog" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<script type="text/javascript" language=javascript>
+    $.validator.unobtrusive.parse(document);
+</script>
 
-                <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Novo item</h6>
 
-                @using (Html.BeginForm("_NovoItem", "Estoque", FormMethod.Post))
-                {
-                    @Html.AntiForgeryToken();
-                    @Html.ValidationSummary(true)
+<form asp-action="_NovoItem" asp-controller="Estoque" method="post" data-ajax="true" data-ajax-update="Modal-lightbox">
+    @*using (Ajax.BeginForm("_NovoItem", "Estoque", new AjaxOptions { OnSuccess = "handleSuccess" }))*@
+    @Html.AntiForgeryToken()
+    <div class="modal fade" id="Modal-lightbox" tabindex="-1" role="dialog" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+
+                    <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Novo item</h6>
+
                     <div class="form-group row">
                         <label class="col-sm-8 col-form">@Html.LabelFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })</label>
                         <div class="col-sm-8">
@@ -55,19 +59,19 @@
                     </div>
 
                     <div class="input-group mb-3">
-                        @Html.EditorFor(model => model.IdFornecedor, new { htmlAttributes = new { @class = "form-control", @placeholder = "Fornecedor" } })
-                        @Html.ValidationMessageFor(modelItem => modelItem.IdFornecedor, "", new { @class = "text-danger" })
+                        @Html.DropDownListFor(model => model.IdFornecedor, new SelectList(Model.Fornecedors, "Id", "Nome", Model.IdFornecedor), "Selecionar fornecedor")
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button">Novo</button>
                         </div>
+                        @Html.ValidationMessageFor(modelItem => modelItem.IdFornecedor, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="input-group mb-3">
-                        @Html.EditorFor(model => model.IdCategoria, new { htmlAttributes = new { @class = "form-control", @placeholder = "Categoria" } })
-                        @Html.ValidationMessageFor(modelItem => modelItem.IdCategoria, "", new { @class = "text-danger" })
+                        @Html.DropDownListFor(model => model.IdCategoria, new SelectList(Model.Categorias, "Id", "Nome", Model.IdCategoria), "Selecionar categoria")
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button">Novo</button>
                         </div>
+                        @Html.ValidationMessageFor(modelItem => modelItem.IdCategoria, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group row">
@@ -76,9 +80,33 @@
                             <button type="submit" class="btn btn-success m-b-0">Adicionar</button>
                         </div>
                     </div>
-
-                }
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
+
+
+<!--<script>
+    $(document).ready(function do_save() {
+        $("#btnSubmit").click(function () {
+            var myformdata = $("#Modal-lightbox").serialize();
+            $ajax({
+                type: "POST",
+                url: "/Sistema/Estoque/Index",
+                data: myformdata,
+                success: function () {
+                    $("#main").modal("#hide")
+                }
+            })
+        })
+    })
+
+    var saveForm = function () {
+
+    }
+</script>-->
+
+@section Scripts {
+    @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.js")
+}
