--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/fontawesome")
     @Scripts.Render("~/bundles/mapa")
+
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
 </head>
 <body>
     <!--https://stackoverflow.com/questions/48550955/mvc-bootstrap-navbar-not-working-after-running-nuget-updates-->
