--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/_NovoItem.cshtml
@@ -1,23 +1,20 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.Item
 
-<script type="text/javascript" language=javascript>
-    $.validator.unobtrusive.parse(document);
-</script>
 
+@*using (Ajax.BeginForm("_NovoItem", "Estoque", new AjaxOptions { OnSuccess = "handleSuccess" }))*@
 
-<form asp-action="_NovoItem" asp-controller="Estoque" method="post" data-ajax="true" data-ajax-update="Modal-lightbox">
-    @*using (Ajax.BeginForm("_NovoItem", "Estoque", new AjaxOptions { OnSuccess = "handleSuccess" }))*@
-    @Html.AntiForgeryToken()
-    <div class="modal fade" id="Modal-lightbox" tabindex="-1" role="dialog" data-backdrop="static">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                    <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Novo item</h6>
-
+<div class="modal fade" id="add-item" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Novo item</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="_NovoItem">
+                    <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
                     <div class="form-group row">
                         <label class="col-sm-8 col-form">@Html.LabelFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })</label>
                         <div class="col-sm-8">
@@ -74,17 +71,14 @@
                         @Html.ValidationMessageFor(modelItem => modelItem.IdCategoria, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group row">
-                        <label class="col-sm-7"></label>
-                        <div class="col-sm-10">
-                            <button type="submit" class="btn btn-success m-b-0">Adicionar</button>
-                        </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success m-b-0" data-save="ajax-modal">Adicionar</button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
-</form>
+</div>
 
 
 <!--<script>
@@ -106,7 +100,3 @@
 
     }
 </script>-->
-
-@section Scripts {
-    @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.js")
-}
