--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Estoque/Index.cshtml
@@ -22,7 +22,8 @@
                 <div class="card-body">
                     <div class="card-content">
                         <div class="card-content">
-                            <button type="button" class="btn btn-info waves-effect" data-toggle="modal" data-target="#Modal-lightbox">Novo item</button>
+                            <div id="modal-placeholder"></div>
+                            <button type="button" class="btn btn-info waves-effect" data-toggle="ajax-modal" data-target="#add-item">Novo item</button>
                             @{Html.RenderAction("_NovoItem", "Estoque");}
                         </div>
                         <table class="table">
@@ -53,9 +54,17 @@
     </div>
 </div>
 
-<script>
-    $('#modal-container').change(
-        function () {
-            $.validator.unobtrusive.parse("#Modal-lightbox");
-        });
-</script>
+<environment include="Development">
+    <script src="~/Scripts/crudmodal.js" asp-append-version="true" defer></script>
+</environment>
+
+<environment exclude="Development">
+    <script src="~/js/crudmodal.min.js" asp-append-version="true" defer></script>
+</environment>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"
+        integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.9/jquery.validate.unobtrusive.min.js"
+        integrity="sha256-paoxpct33kY9fpQlvgC8IokjGq8iqYaVFawgFPg8oz0="
+        crossorigin="anonymous"></script>
